map added, a lot of sizes fixed, added logo in stuck nav bar, form vizual fully done

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,7 @@ body {
   margin: auto;
   width: 100vw;
   height: 100vh;
+  z-index: 3;
   &__dot1 {
     position: absolute;
     z-index: 10;
@@ -215,10 +216,13 @@ body {
 .navBackground {
   display: flex;
   width: 100%;
-  height: 14%;
+  height: 20%;
   z-index: 2;
   position: fixed;
   background-color: rgba(0, 0, 0, 0.486);
+  &__bialy{
+    padding-top: 2%;
+  }
 }
 .buttonNext {
   position: absolute;
@@ -302,102 +306,22 @@ body {
   height: 100vh;
   padding-top: 20%;
   z-index: 1;
-  
-  // display: grid;
-  
-  // grid-template-columns: repeat(5, 1fr);
-  // grid-template-rows: repeat(12, 1fr);
-  // &__name{
-  //   grid-column: 2/3;
-  //   grid-row: 5;
-  // }
-  // &__surname{
-  //   grid-column: 3/4;
-  //   grid-row: 5;
-  // }
-  // &__email{
-  //   grid-column: 3;
-  //   grid-row: 6;
-  // }
-  // &__message{
-  //   grid-column: 3;
-  //   grid-row: 7;
-  // }
-  // &__button{
-  //   grid-column: 3;
-  //   grid-row:8 ;
-  //   width: 100px;
-  // }
-}
-.footer {
-  display: grid;
-  grid-template-columns: repeat(16, 1fr);
-  grid-template-rows: repeat(5, 1fr);
-  color: white;
-  text-decoration: none;
-  letter-spacing: 1px;
-  background-color: #001927;
-  font-size: 14px;
-
-  &__adress {
-    grid-column: 3/5;
-    grid-row: 2/3;
+  &__title{
+    position: absolute;
+    text-align: center;
+    width: 100vw;
+    font-size: 25px;
+    
+    
   }
-  &__maps {
-    grid-column: 3/4;
-    grid-row: 3/5;
-  }
-  &__list1 {
-    list-style-type: none;
-    width: 100%;
-    grid-row: 2/4;
-    grid-column: 5/6;
-  }
-  &__list2 {
-    list-style-type: none;
-    width: 100%;
-    grid-row: 2/4;
-    grid-column: 7/8;
-  }
-  &__list3 {
-    list-style-type: none;
-    width: 100%;
-    grid-row: 2/4;
-    grid-column: 9/10;
-  }
-  &__list4 {
-    list-style-type: none;
-    width: 100%;
-    grid-row: 2/4;
-    grid-column: 11/12;
-  }
-  &__list5 {
-    list-style-type: none;
-    width: 100%;
-    grid-row: 2/4;
-    grid-column: 13/14;
-  }
-  &__signature {
-    grid-column: 12/15;
-    grid-row: 4;
-  }
-}
-a:-webkit-any-link {
-  color: white;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-@media (max-width:1300px){
-  .slider__button2{
-    left:45%;
-
-  }
-  .slider__bialy{
-    left: 5%;
-  }
-  .buttonNext{
-    left:20%;
+  &__title2{
+    position: absolute;
+    text-align: center;
+    width: 100vw;
+    font-size: 15px;
+    padding-top:5%;
+    color: #7B94A5;
+    
   }
 }
 
@@ -412,21 +336,23 @@ input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid
   transition: all 0.225s ease;
 }
 
-.styled-input {
+.styled__input {
   float: left;
-  width: 293px;
+  width: 270px;
   margin: 1rem 0;
   position: relative;
   border-radius: 4px;
+  
+  
 }
 
 @media only screen and (max-width: 768px){
-  .styled-input {
+  .styled__input {
       width:100%;
   }
 }
 
-.styled-input label {
+.styled__input label {
   color: #7B94A5;
   padding: 1.3rem 30px 1rem 30px;
   position: absolute;
@@ -437,7 +363,7 @@ input:focus ~ label, textarea:focus ~ label, input:valid ~ label, textarea:valid
   pointer-events: none;
 }
 
-.styled-input.wide { 
+.styled__input.wide { 
   width: 650px;
   max-width: 100%;
 }
@@ -449,7 +375,7 @@ textarea {
   width: 100%;
   font-size: 1rem;
   background-color: #ffffff;
-  color: white;
+  color: rgb(0, 0, 0);
   border-radius: 4px;
 }
 
@@ -472,6 +398,7 @@ textarea {
   width: 650px;
   max-width: 100%;
   margin: 20px auto 25px auto;
+  margin-top:10%;
 }
 
 .submit-btn {
@@ -489,6 +416,97 @@ textarea {
   font-size: 18px;
   cursor: pointer;
 }
+
+
+#scales{
+  float: left;
+  width: auto;
+  color: black;
+}
+.scales{
+  float: left;
+  width: 650px;
+  color: black !important;
+  margin-bottom: 20px;
+  padding-left: 20px;
+  margin-top: -10px;
+}
+.footer {
+  display: grid;
+  grid-template-columns: repeat(16, 1fr);
+  grid-template-rows: repeat(5, 1fr);
+  color: white;
+  text-decoration: none;
+  letter-spacing: 1px;
+  background-color: #001927;
+  font-size: 14px;
+  height: 500px;
+
+  &__adress {
+    grid-column: 3/5;
+    grid-row: 2/3;
+  }
+  &__maps {
+    grid-column: 3/4;
+    grid-row: 3/5;
+    padding-top: 10%;
+  }
+  &__list1 {
+    list-style-type: none;
+    width: 100%;
+    grid-row: 2/4;
+    grid-column: 5/7;
+  }
+  &__list2 {
+    list-style-type: none;
+    width: 100%;
+    grid-row: 2/4;
+    grid-column: 7/9;
+  }
+  &__list3 {
+    list-style-type: none;
+    width: 100%;
+    grid-row: 2/4;
+    grid-column: 10/12;
+  }
+  &__list4 {
+    list-style-type: none;
+    width: 100%;
+    grid-row: 2/4;
+    grid-column: 12/14;
+  }
+  &__list5 {
+    list-style-type: none;
+    width: 100%;
+    grid-row: 2/4;
+    grid-column: 15/16;
+    grid-column-gap: 10px;
+  }
+  &__signature {
+    grid-column: 12/16;
+    grid-row: 5;
+  }
+}
+a:-webkit-any-link {
+  color: white;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+@media (max-width:1300px){
+  .slider__button2{
+    left:45%;
+
+  }
+  .slider__bialy{
+    left: 5%;
+  }
+  .buttonNext{
+    left:20%;
+  }
+}
+
+
 
 
 
